--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       </li>
 
       <li class="bold">       
-        <a aria-label="Open Jen's resume in a new tab" href="https://github.com/Jen-ai87/jen-ai87.github.io/resume/jen_henry_resume.pdf" target="_blank"
+        <a aria-label="Open Jen's resume in a new tab" href="https://jen-ai87.github.io/resume/jen_henry_resume.pdf" target="_blank"
         class="waves-effect waves-dark teal-text"><i class="mdi-file-folder-open small"></i><span>Resume</span></a>  
       </li>
     </ul>
