--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         </p>
         <p>
           <ul>
-            <li><b>CyberSecurity Tools:</b> Kali Linus, WireShark, BurpSuite, Metasploit, Bash Shell Scripting</li>
+            <li><b>CyberSecurity Tools:</b> Kali Linux, WireShark, BurpSuite, Metasploit, Bash Shell Scripting</li>
             <li><b>Languages:</b> Python, Java, JavaScript, HTML/CSS, Bash</li>
             <li><b>Databases:</b> MySQL, PostgreSQL, MSSQL, SQLite</li>
             <li><b>Frameworks:</b> jQuery, Node.js, Bootstrap</li>
