--- a/index.html
+++ b/index.html
@@ -587,8 +587,8 @@
           <a aria-label="View Jen on GitHub" href="http://github.com/jenai87" target="_blank"
             data-position="top" data-tooltip="View Jen Henry on GitHub"
             class="btn-floating btn-large waves-effect waves-light blue-grey tooltipped"><i class="fa fa-github"></i><a
-              aria-label="Jen Henry on Github" href="http://github.com/jenai87" class="hoverline"
-              target="_blank">github.com/jenai87</a></a>
+              aria-label="Jen Henry on Github" href="https://github.com/Jen-ai87" class="hoverline"
+              target="_blank">github.com/jen-ai87</a></a>
         </p>
       </div>
     </section>
